fixed problems with piano spacing

--- a/piano/style/style.css
+++ b/piano/style/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 #piano {
-	width: 1440px; 
+	width: 1920px; 
 	height: 100%;
 	margin-left: 0;
 	overflow-x: auto;
@@ -70,4 +70,8 @@ body {
 	margin-bottom: 50%; 
 	float: left;
 	z-index: 15;
+}
+
+.left {
+	
 }
